# IRS_form_downloader

./: .gitignore  README.md  config.json  etl_pipeline.py  evaluate_data.py  pyproject.toml  requirements.txt
tests/: test_comprehensive.py  test_pipeline.py  test_quality.py
tests/fixtures/: sample_990.xml  sample_990pf.xml
