[project]
name = "irs-form-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "ruff",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E = pycodestyle errors, F = Pyflakes, I = isort (import sorting)
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "quality: marks tests as code quality checks (black, ruff)",
]
